tests/spec/fail/builtin_named_missing_required.aja
import (
    "http"
)

print(http.request(url = "file:///tmp/aja_builtin_named_args.txt", body = "x"))
